FIX: games/words issues with dark mode

--- a/public/games/words/style.css
+++ b/public/games/words/style.css
@@ -4,6 +4,7 @@ main{
     min-height: 100dvh;
     transition: background 400ms ease;
     background-color: var(--clr-neutral-900);
+    color: var(--clr-neutral-100);
 }
 
 .wordHeader{
